--- a/Aufgaben/A04/StylePortfolio.css
+++ b/Aufgaben/A04/StylePortfolio.css
@@ -1,5 +1,13 @@
 header {
-    background: url(task_material/foto/foto1_big.jpg) no-repeat;
-    height: 400px;
+    
 
+}
+
+#video01 {
+
+    height: 400px;
+}
+
+.sketches {
+    height: 400px;
 }
