--- a/Aufgaben/A04/StylePortfolio.css
+++ b/Aufgaben/A04/StylePortfolio.css
@@ -3,6 +3,35 @@ header {
 
 }
 
+body {
+    
+}
+
+ul {
+
+    background-color: rgb(92, 92, 92);
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+
+li a {
+    display: block;
+    color: rgb(255, 255, 255);
+    float: left;
+    padding: 18px;
+    text-align: center;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+    
+
+    
+}
+
+
 #video01 {
 
     height: 400px;
