--- a/Aufgaben/A04/StylePortfolio.css
+++ b/Aufgaben/A04/StylePortfolio.css
@@ -1,4 +1,8 @@
-body {
+.container {
+    width: 800px;
+    margin: auto;
+    padding: 10px;
+    
 
 }
 
@@ -73,7 +77,7 @@ li a {
 }
 
 #video01 {
-    padding-left: 640px;
+    
     height: 400px;
 }
 
@@ -88,12 +92,14 @@ p.gifInfo {
 }
 
 .sketches {
-    height: 400px;
-    display: inline;
+    height: 250px;
+    display: block;
+    
+    
 }
 
 .charDesign {
     display: inline-block;
-    height: 400px;
+    height: 250px;
         
 }
