--- a/Aufgaben/A04/StylePortfolio.css
+++ b/Aufgaben/A04/StylePortfolio.css
@@ -1,8 +1,3 @@
-.navContainer {
-    
-    
-
-}
 
 .container {
     width: 800px;
@@ -10,6 +5,32 @@
     padding: 10px;
 
 }
+
+.containerFooter {
+    width: 800px;
+    margin: auto;
+}
+
+footer {
+    background-color: #eaeaea;
+    width: 100%;
+    height: 150px;
+}
+
+.copyright {
+    float: right;
+    margin-right: 25%;
+    margin-top: 50px;
+    font-size: 85%;
+}
+
+.kontaktdaten {
+    
+    height: 5px;
+    font-size: 85%;
+    
+}
+
 
 
 .logo {
@@ -27,7 +48,7 @@
 
 .backgroundPic {
     position: absolute;
-    width: 100%;
+    width: 99%;
     height: 400px;
     z-index: -1;
 }
