--- a/Aufgaben/A04/StyleContact.css
+++ b/Aufgaben/A04/StyleContact.css
@@ -1,3 +1,16 @@
+.logo {
+    display: block;
+    height: 150px;
+    padding-left: 30%;
+    
+}
+
+.logo:hover {
+
+    content: url(my_material/Logo/Skytecc\ Logo\ 02.svg);
+    
+}
+
 ul li a:hover {
     
     color: white;
@@ -36,4 +49,38 @@ li a {
     width: 99%;
     height: 400px;
     z-index: -1;
+}
+
+.containerFooter {
+    width: 800px;
+    margin: auto;
+}
+
+footer {
+    background-color: #eaeaea;
+    width: 100%;
+    height: 150px;
+}
+
+
+.copyright {
+    float: right;
+    font-size: 50%;
+    padding-right: 150px;
+}
+
+.kontaktdaten {
+    height: 5px;
+    font-size: 85%;
+    
+}
+
+.containerIcons {
+    padding-top: 10px;
+    padding-left: 38%;
+}
+
+.icons {
+    height: 25px;
+    
 }
