--- a/Aufgaben/A04/StyleContact.css
+++ b/Aufgaben/A04/StyleContact.css
@@ -87,10 +87,8 @@
 
 #message li input[type=text]{
 	border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
 	border: none;
-    background-color: rgb(65, 65, 65)   
+    background-color:rgb(136, 136, 136);   
 }
 
 #message input {
@@ -98,10 +96,11 @@
     height: 50px;
 }
 
+
 #message textarea {
     width: 500px;
     height: auto;
-    background-color: rgb(65, 65, 65);
+    background-color: rgb(136, 136, 136);
 }
 
 #message li :placeholder-shown {
@@ -109,13 +108,17 @@
     
 }
 
-#message li input[type=send] {
-    background-color: rgb(65, 65, 65);
+#message li input[type=submit] {
+    background-color: rgb(136, 136, 136);
+    width: 50px;
+    height: 25px;
+    margin-left: 450px;
 } 
 
-#message li input[type=send] :placeholder-shown {
-    color: white;
+#message li input[value="Send"] {
+   color: white;
 }
+
 
 .yourMessage {
     height: 150px;
