--- a/Aufgaben/A04/StylePortfolio.css
+++ b/Aufgaben/A04/StylePortfolio.css
@@ -6,6 +6,11 @@
 
 }
 
+#header {
+    width: 800;
+    margin 0;
+}
+
 footer {
     background-color: #eaeaea;
     margin: 0px -10px -10px -10px;
@@ -49,7 +54,8 @@ footer {
 
 .backgroundPic {
     position: absolute;
-    width: 99%;
+    width: 100%;
+    margin: 0;
     height: 400px;
     z-index: -1;
 }
