--- a/Aufgaben/A04/StyleAboutMe.css
+++ b/Aufgaben/A04/StyleAboutMe.css
@@ -1,3 +1,8 @@
+.container {
+    width: 800px;
+    margin: auto;
+}
+
 .logo {
     display: block;
     height: 150px;
@@ -45,9 +50,14 @@ li a {
 }
 
 .backgroundPic {
+    background-image: url("my_material/Design/Glow\ Übung.jpg");
     position: absolute;
-    width: 99%;
+    width: 100%;
     height: 400px;
+    margin: 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 0% 65%;
     z-index: -1;
 }
 
@@ -69,29 +79,32 @@ li a {
 
 footer {
     background-color: #eaeaea;
-    width: 100%;
-    height: 150px;
-    margin-top: 50px;
 }
 
-.copyright {
-    float: right;
-    font-size: 50%;
-    padding-right: 150px;
+.flex {
+    display: flex;
+    justify-content: space-between;
 }
 
 .kontaktdaten {
-    height: 5px;
-    font-size: 85%;
-    
+    font-size: small;
+    color: black;
+    text-align: left;
+}
+.icons {
+    font-size: small;
+    color: black;
+    text-align: center;
+    height: 25px;
 }
 
 .containerIcons {
-    padding-top: 10px;
-    padding-left: 38%;
+    width: 110px;
 }
 
-.icons {
-    height: 25px;
+.copyright {
+    font-size: small;
+    color: black;
+    text-align: right;
     
 }
