--- a/Aufgaben/A04/StyleContact.css
+++ b/Aufgaben/A04/StyleContact.css
@@ -1,10 +1,7 @@
-#mainContainer {
+.container {
     width: 800px;
     margin: auto;
-
 }
-
-
 
 .logo {
     display: block;
@@ -59,14 +56,23 @@
 }
 
 .backgroundPic {
+    background-image: url("my_material/Design/Glow\ Übung.jpg");
     position: absolute;
-    width: 99%;
+    width: 100%;
     height: 400px;
+    margin: 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 0% 65%;
     z-index: -1;
 }
 
 #containerMessage {
     margin-top: 200px;
+}
+
+#message {
+    height: 500px;
 }
 
 #message ul {
