--- a/Aufgaben/A05/StyleAboutMe02.css
+++ b/Aufgaben/A05/StyleAboutMe02.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
+p, h1, h2 {
+    font-family: "Lato", sans-serif;
+}
+
+
 .container {
     width: 800px;
     margin: auto;
