--- a/Aufgaben/A05/StyleContact02.css
+++ b/Aufgaben/A05/StyleContact02.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
+a {
+    font-family: "Lato", sans-serif;
+}
+
 .container {
     width: 800px;
     margin: auto;
