--- a/Aufgaben/A05/StyleHeaderFooter02.css
+++ b/Aufgaben/A05/StyleHeaderFooter02.css
@@ -80,10 +80,23 @@ li a {
     z-index: -1;
 
     animation-name: slider;
-    animation-duration: 5s;
-    
-
+    animation-iteration-count: infinite;
+    animation-duration: 15s;
+    animation-delay: 5s;
 }
+
+/* @keyframes slider {
+
+    0%      { opacity: 1; }  
+	11.11%  { opacity: 0; }
+    33.33%  { opacity: 1; background-image: url("my_material/Design/Light\ and\ Shadow\ Übung.jpg"); } 
+	44.44%  { opacity: 0; }
+    66.66%  { opacity: 1; background-image: url("my_material/Design/Idea\ Conception\ small.jpg"); }
+    77.77%  { opacity: 0; }
+
+
+} */
+
 
 footer {
     background-color: #eaeaea;
