--- a/Aufgaben/A05/StyleHeaderFooter02.css
+++ b/Aufgaben/A05/StyleHeaderFooter02.css
@@ -5,17 +5,22 @@ p, h1 ,h3 {
 }
 
 #banner {
-    background: rgb(134, 134, 134);
+    background: rgb(31, 31, 31);
     display: block;
-    padding: 10px 120px;
+    padding: 15px 130px;
     position: fixed;
-    margin-left: 77%;
+
+    top: 30px;
+    right: -120px;
+    transform: rotate(45deg);
+     transform: rotate(45deg);
+     z-index: 99999;
 }
 
 #banner .inhalt {
     position: relative;
     width: 100px;
-    height: 35px;
+    height: 50px;
     text-align: center;
     font-family: "Lato", sans-serif;
     color: white;
@@ -94,6 +99,7 @@ li a {
     66.66%  { transition: opacity 2s; opacity: 1; background-image: url("my_material/Design/2D\ Graphic\ test\ Background\ 1\ blue.jpg"); background-position: 0% 50%; }
     77.77%  { transition: opacity 2s; opacity: 0; }
 } 
+
 
 
 footer {
