Add Solution to a) optional with hovering while siblings opacity are lower. And Fixed Animation little things. Add Logo grey

--- a/Aufgaben/A05/StyleHeaderFooter02.css
+++ b/Aufgaben/A05/StyleHeaderFooter02.css
@@ -36,7 +36,7 @@ p, h1 ,h3 {
 
 .logo:hover {
 
-    content: url(my_material/Logo/Skytecc\ Logo\ 02.svg);
+    content: url("my_material/Logo/Skytecc\ Logo\ 03.svg");
     
 }
 
