--- a/Aufgaben/A05/StylePortfolio02.css
+++ b/Aufgaben/A05/StylePortfolio02.css
@@ -61,15 +61,16 @@ p.gifInfo {
     transition: transform  0.5s;
 }
 
-.sketches:hover {
+.sketchContainer:hover > .sketches:hover {
     transform: scale(1.1);
     width: 600px;
     height: 300px;
     padding-left: 12.5%;
+    opacity: 1;
 }
 
-.sketches:not(.sketches:hover) {
-    opacity: 50%;
+.sketchContainer:hover .sketches {
+    opacity: 0.5;
     transition: opacity 0.5s;
 }
 
