--- a/Aufgaben/A05/StyleContact02.css
+++ b/Aufgaben/A05/StyleContact02.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
+@media only screen and (max-width: 800px) {
+    .header {
+        width: 100%;
+    }
+}
+
 a {
     font-family: "Lato", sans-serif;
 }
