--- a/Aufgaben/A05/StylePortfolio02.css
+++ b/Aufgaben/A05/StylePortfolio02.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
+@media only screen and (max-width: 800px) {
+    body {
+        width: 100%;
+    }
+}
 
 .container {
     width: 800px;
