--- a/Aufgaben/A05/StyleHeaderFooter02.css
+++ b/Aufgaben/A05/StyleHeaderFooter02.css
@@ -5,11 +5,17 @@ p, h1 ,h3 {
 }
 
 
-@media only screen and (max-width: 800px) {
+/* @media only screen and (max-width: 800px) {
     .header {
         width: 100%;
     }
-}
+} */
+
+@media ( max-width: 800px )  {
+    #banner { 
+        width: 100%;
+    } 
+} 
 
 #banner {
     background: rgb(31, 31, 31);
@@ -104,7 +110,7 @@ li a {
 	44.44%  { transition: opacity 2s; opacity: 0; }
     66.66%  { transition: opacity 2s; opacity: 1; background-image: url("my_material/Design/2D\ Graphic\ test\ Background\ 1\ blue.jpg"); background-position: 0% 50%; }
     77.77%  { transition: opacity 2s; opacity: 0; }
-}
+}  
 
 footer {
     background-color: #eaeaea;
