--- a/Aufgaben/A08/style.css
+++ b/Aufgaben/A08/style.css
@@ -2,6 +2,11 @@ body {
     background-color: black;
 }
 
+.playButton {
+    position: relative;
+    left: 45%;
+}
+
 .drumpad {
     position: relative;
     margin: auto;
