--- a/Aufgaben/A09/style.css
+++ b/Aufgaben/A09/style.css
@@ -4,9 +4,18 @@ body {
 
 .btn {
     position: relative;
-    left: 42%;
     color: white;
-    font-size: 110px;
+    font-size: 50px;
+    left: 45%;
+    margin-top: 10px;
+}
+
+.rmxBtn {
+    color: white;
+    font-size: 50px;
+    margin-top: 50px;
+    margin-left: 44%;
+    
 }
 
 .drumpad {
