--- a/Aufgaben/A09/style.css
+++ b/Aufgaben/A09/style.css
@@ -2,20 +2,31 @@ body {
     background-color: black;
 }
 
+.icon {
+    position: relative;
+    right: 30px;
+}
+
 .btn {
     position: relative;
     color: white;
     font-size: 50px;
-    left: 45%;
+    left: 50%;
     margin-top: 10px;
 }
 
 .rmxBtn {
+    position: relative;
     color: white;
     font-size: 50px;
-    margin-top: 50px;
-    margin-left: 44%;
-    
+    left: 120px;
+}
+
+#trash {
+    position: relative;
+    color: white;
+    font-size: 50px;
+    left: 220px;
 }
 
 .drumpad {
