--- a/Aufgaben/A09/style.css
+++ b/Aufgaben/A09/style.css
@@ -7,7 +7,11 @@ body {
     right: 30px;
 }
 
-.btn {
+.hidden {
+    display: none !important;
+}
+
+#play, #stop {
     position: relative;
     color: white;
     font-size: 50px;
