--- a/Aufgaben/A10/styleApp.css
+++ b/Aufgaben/A10/styleApp.css
@@ -51,7 +51,8 @@ ul li {
     margin: 0;
     border: none;
     border-radius: 0;
-    width: 350px;
+    width: 417px;
+    height: 50px;
     outline: none;
     font-size: 20px;
 }
