--- a/Aufgaben/A10/styleApp.css
+++ b/Aufgaben/A10/styleApp.css
@@ -54,7 +54,7 @@ ul li:checked {
 #newInput {
     margin: 0;
     border: none;
-    border-radius: 0;
+    background-color: aliceblue;
     width: 417px;
     height: 50px;
     outline: none;
@@ -68,6 +68,16 @@ ul li:checked {
 .fas:hover {
     color: rgb(196, 34, 34);
     transform: scale(1.2);
+}
+
+.totalnumber {
+
+    display: block;
+    width: 417px;
+    font-family: "Lato", sans-serif;
+    font-size: 20px;
+    text-align: center;
+    background-color: white;
 }
 
 
